[package]
name = "cryptonote"
version = "0.10.0"
authors = ["Michael Bohn <spaceodyssey@gmx.de>"]

[lib]
name = "cryptonote"

[dependencies]
groestl = "0.9.0"
blake = "2.0.1"
blake2b_simd = "0.5.11"
jh-ffi = "0.5.0"
skein-ffi = "0.5.0"
log = "0.4.14"
byteorder = "1.4.3"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }